@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
 
+2011-05-12  Michael Jahn
+	* added "virtual" resolutions (4:3 Fullscreen, Widescreen, Anamorphic Widescreen)
+
 2011-05-05  Michael Jahn
 	* fixed movie plugin AllMovie, it is now AllRovi
 	* small fixes for CineMovies and HKMDB
